# HighTideLight.nvim

./: ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ASTRONVIM_SETUP.md  BREAKTHROUGH_SUMMARY.md  BootTidal.hs  DEBUGtalk.md  DEVELOPMENT_NOTES.md  DEVELOPMENT_STATUS.md  HIGHLIGHT_FEATURES.md  LLMvibeNote.md  QC_HANDOFF.md  QC_REPORT.md  QUICK_START.md  README.md  TEST.md  TESTING.md  TODO.md  TOMORROW.md  animation.lua  highlights.lua  init.lua  osc.lua  processor.lua  start_highlighting.sh  startup.scd  test_highlights.tidal  test_osc.py  test_osc_bridge.py  tidal.tidal
lua/tidal-highlight/: animation.lua  cache.lua  compat.lua  config.lua  debug.lua  diagnostics.lua  highlight_handler.lua  highlights.lua  init.lua  integration.lua  osc.lua  processor.lua  processor.lua.old  source_map.lua  state_service.lua  telemetry_monitor.lua
lua/tidal-highlight/parser/: haskell.lua  mini_notation.lua
lua/tidal-highlights/: init.lua  renderer.lua  state.lua
supercollider/: HighTideLightOSC.scd
tests/: osc_mock.lua  run_tests.lua
tests/fixtures/: tidal_patterns.lua
tests/integration/: plugin_test.lua
tests/unit/: osc_test.lua  processor_test.lua
tidal-osc-bridge/: Cargo.toml
tidal-osc-bridge/src/: main.rs
