[package]
name = "tidal-osc-bridge"
version = "0.1.0"
edition = "2021"
description = "OSC bridge for tidal-highlights.nvim"
license = "MIT"

[[bin]]
name = "tidal-osc-bridge"
path = "src/main.rs"

[dependencies]
rosc = "0.10"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"